# RPi-WidgetBox

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  build_static.sh  docker-compose.yml  dockerfile
.github/workflow/: main.yml
.github/workflows/: main.yml
display/: index.html  package.json
display/src/: main.ts  style.css
src/: handler.rs  logger.rs  main.rs  plugin.rs  style.rs
