[package]
name = "rpi-widgetbox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
fern = {version = "0.7.1", features = ["colored"]}
log = "0.4.25"
regex = "1.11.1"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
ws = "0.9.2"
